--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,8 @@ edition = "2021"
 
 [dependencies]
 bevy = "0.12.0"
+bevy-inspector-egui = "0.21.0"
+bevy-inspector-egui-rapier = {version = "0.9.0",  features=["rapier2d"]}
 bevy_pancam = "0.10.0"
+bevy_rapier2d = {version = "0.23.0", features = ["simd-stable",  "parallel"]}
 rand = "0.8.5"
