--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,12 @@ edition = "2021"
 [dependencies]
 bevy = "0.12.0"
 bevy_pancam = "0.10.0"
-bevy_rapier2d = {version = "0.23.0", features = ["simd-stable",  "parallel"]}
 rand = "0.8.5"
+
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+bevy_rapier2d = {version = "0.23.0", features = ["simd-stable",  "parallel"]}
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+bevy_rapier2d = {version = "0.23.0"}
+
+[target.wasm32-unknown-unknown]
+runner = "wasm-server-runner"
