--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 bevy = "0.12.0"
 bevy_pancam = "0.10.0"
 rand = "0.8.5"
+bevy_xpbd_2d = "0.3.2"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 bevy_rapier2d = {version = "0.23.0", features = ["simd-stable",  "parallel"]}
