--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bevy = "0.12.0"
-bevy_pancam = "0.10.0"
+bevy = "0.14.0"
+bevy_pancam = "0.14.0"
 rand = "0.8.5"
-bevy_xpbd_2d = "0.3.2"
+avian2d = "0.1.2"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 bevy_rapier2d = {version = "0.23.0", features = ["simd-stable",  "parallel"]}
