--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,9 +12,9 @@ rand = "0.8.5"
 avian2d = "0.1.2"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
-bevy_rapier2d = {version = "0.23.0", features = ["simd-stable",  "parallel"]}
+avian2d = {version = "0.1.2", features = ["parallel"]}
 [target.'cfg(target_arch = "wasm32")'.dependencies]
-bevy_rapier2d = {version = "0.23.0"}
+avian2d = {version = "0.1.2"}
 
 [target.wasm32-unknown-unknown]
 runner = "wasm-server-runner"
